# mcodex

./: .gitattributes  .gitignore  README.md  defs.bzl  justfile
.github/scripts/: run-bazel-ci.sh
.github/workflows/: bazel.yml  ci.yml  rust-ci-full.yml  rust-release-windows.yml  rust-release.yml  sdk.yml
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py  test_install_native_deps.py
codex-rs/: Cargo.toml
codex-rs/account-pool/: BUILD.bazel  Cargo.toml
codex-rs/account-pool/src/: backend.rs  bootstrap.rs  lease_lifecycle.rs  lib.rs  manager.rs  observability.rs  policy.rs  proactive_switch.rs  quota.rs  quota_selection.rs  selection.rs  startup_default.rs  startup_resolution.rs  startup_status.rs  types.rs
codex-rs/account-pool/src/backend/: local.rs
codex-rs/account-pool/src/backend/local/: control.rs  execution.rs  mod.rs  observability.rs
codex-rs/account-pool/src/observability/: conversions.rs
codex-rs/account-pool/tests/: lease_lifecycle.rs  observability.rs  policy.rs  quota_selection.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/core/: Cargo.toml  (+1 more)
codex-rs/core-skills/: Cargo.toml
codex-rs/smoke-fixtures/: BUILD.bazel  Cargo.toml
codex-rs/smoke-fixtures/src/: lib.rs  main.rs
codex-rs/smoke-fixtures/tests/: cli.rs
docs/: authentication.md  config.md  getting-started.md  install.md  release.md  slash_commands.md  tui-chat-composer.md  tui-stream-chunking-validation.md
release/: minisign.pub
scripts/: stage_cli_archives.py  stage_npm_packages.py  test_stage_cli_archives.py  test_stage_npm_packages.py
(+518 files in other folders)
