[package]
name = "codex-account-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "codex_account_pool"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
age = { workspace = true }
chrono = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-login = { workspace = true }
codex-state = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
