[package]
name = "codex-smoke-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcodex-smoke-fixture"
path = "src/main.rs"

[lib]
name = "codex_smoke_fixtures"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
